objects/LLC_BI__Deposit_Contribution__c.object
<CustomObject>
    <description>The Deposit Contribution Object is used to track details of contributions to deposits within nCino</description>
    <fields>
        <fullName>LLC_BI__Contribution_Amount__c</fullName>
        <description>The amount of the IRA/HSA contribution.</description>
        <inlineHelpText>The amount of the IRA/HSA contribution.</inlineHelpText>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contribution_Plus_Earnings_Amount__c</fullName>
        <description>The amount of contribution plus earnings.</description>
        <inlineHelpText>The amount of contribution plus earnings.</inlineHelpText>
        <label>Contribution Plus Earnings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contribution_Tax_Year__c</fullName>
        <description>The tax year of the IRA/HSA contribution.</description>
        <inlineHelpText>The tax year of the IRA/HSA contribution.</inlineHelpText>
        <label>Contribution Tax Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contribution_Type__c</fullName>
        <description>The IRA Contribution Type</description>
        <inlineHelpText>The IRA Contribution Type</inlineHelpText>
        <label>Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular (including Catch-Up)</fullName>
                </value>
                <value>
                    <fullName>Rollover from an HSA</fullName>
                </value>
                <value>
                    <fullName>Transfer from an HSA</fullName>
                </value>
                <value>
                    <fullName>Return of Mistaken Distribution</fullName>
                </value>
                <value>
                    <fullName>Rollover from an Archer Medical Savings Account</fullName>
                </value>
                <value>
                    <fullName>Transfer from an Archer Medical Savings Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Basis_Amount__c</fullName>
        <description>The deposit basis amount of the (CESA) contribution. The basis amount equals the amount of the rollover or transfer contribution.</description>
        <inlineHelpText>The deposit basis amount of the (CESA) contribution. The basis amount equals the amount of the rollover or transfer contribution.</inlineHelpText>
        <label>Deposit Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Earnings_Amount__c</fullName>
        <description>The deposit earnings amount of the (CESA) contribution.</description>
        <inlineHelpText>The deposit earnings amount of the (CESA) contribution.</inlineHelpText>
        <label>Deposit Earnings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the request associated to the contribution</description>
        <label>Deposit Request</label>
        <referenceTo>LLC_BI__Deposit_Request__c</referenceTo>
        <relationshipLabel>Deposit Contributions</relationshipLabel>
        <relationshipName>Deposit_Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <description>A lookup to the deposit associated to the contribution</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Deposit Contributions</relationshipLabel>
        <relationshipName>Deposit_Contributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Contribution_Date__c</fullName>
        <description>The date of the IRA contribution.</description>
        <inlineHelpText>The date of the IRA contribution.</inlineHelpText>
        <label>IRA Contribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Amount__c</fullName>
        <description>The amount of the deposit investment.</description>
        <inlineHelpText>The amount of the deposit investment.</inlineHelpText>
        <label>Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Delivery_Type__c</fullName>
        <description>Specifies the way in which the requested investment should be sent.</description>
        <inlineHelpText>Specifies the way in which the requested investment should be sent.</inlineHelpText>
        <label>Investment Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Proceeds</fullName>
                </value>
                <value>
                    <fullName>In Kind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Description__c</fullName>
        <description>Describes the type of investment.</description>
        <inlineHelpText>Describes the type of investment.</inlineHelpText>
        <label>Investment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Is_Non_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true this is a non-deposit investment.</description>
        <inlineHelpText>If true this is a non-deposit investment.</inlineHelpText>
        <label>Investment is Non-Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Request_Date__c</fullName>
        <description>The date that the specified investment is requested to be sent and/or liquefied.</description>
        <inlineHelpText>The date that the specified investment is requested to be sent and/or liquefied.</inlineHelpText>
        <label>Investment Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Deposit_Investment_Shares__c</fullName>
        <description>The number of shares of the non-deposit investment.</description>
        <inlineHelpText>The number of shares of the non-deposit investment.</inlineHelpText>
        <label>Non-Deposit Investment Shares</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_Distrubtion_Description__c</fullName>
        <description>For a contribution that is a return of a mistaken distribution(s) this is a description of the date(s) of the original distribution(s).</description>
        <inlineHelpText>For a contribution that is a return of a mistaken distribution(s) this is a description of the date(s) of the original distribution(s).</inlineHelpText>
        <label>Original Distrubtion Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_Beneficiary_Contribution_Type__c</fullName>
        <description>Specifies the type of contribution for a Roth Beneficiary IRA.</description>
        <inlineHelpText>Specifies the type of contribution for a Roth Beneficiary IRA.</inlineHelpText>
        <label>Roth Beneficiary Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer from a Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from a Designated Roth Account</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from an Eligible Retirement Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_Contribution_Reason__c</fullName>
        <description>The contribution type reason code.  The Roth IRA Contribution Type is Qualified Reservists/Designated Disaster Distribution Repayment or Disaster/Combat Zone Postponed Contribution.</description>
        <inlineHelpText>The contribution type reason code.  The Roth IRA Contribution Type is Qualified Reservists/Designated Disaster Distribution Repayment or Disaster/Combat Zone Postponed Contribution.</inlineHelpText>
        <label>Roth Contribution Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_IRA_Contribution_Type__c</fullName>
        <description>The IRA Contribution Type</description>
        <inlineHelpText>The IRA Contribution Type</inlineHelpText>
        <label>Roth IRA Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular (including Catch-Up)</fullName>
                </value>
                <value>
                    <fullName>Rollover</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from an Eligible Retirement Plan</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from a Designated Roth Account</fullName>
                </value>
                <value>
                    <fullName>Qualified Reservist/Designated Disaster Distribution Repayment</fullName>
                </value>
                <value>
                    <fullName>Disaster/Combat Zone Postponed Contribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_Rollover_Source_Type__c</fullName>
        <description>Specifies the source of funds for a direct rollover to a Roth IRA.</description>
        <inlineHelpText>Specifies the source of funds for a direct rollover to a Roth IRA.</inlineHelpText>
        <label>Roth Rollover Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Designated Roth Account</fullName>
                </value>
                <value>
                    <fullName>Eligible Retirement Plan (other than a Designated Roth Account)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Simple_IRA_Contibution_Type__c</fullName>
        <description>Specifies the type of contribution for a Simple IRA.</description>
        <inlineHelpText>Specifies the type of contribution for a Simple IRA.</inlineHelpText>
        <label>Simple IRA Contibution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Contribution</fullName>
                </value>
                <value>
                    <fullName>Rollover from a SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>Transfer from a SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Traditional_Benficiary_IRA_Contribution__c</fullName>
        <description>Specifies the type of contribution for a Traditional Beneficiary IRA.</description>
        <inlineHelpText>Specifies the type of contribution for a Traditional Beneficiary IRA.</inlineHelpText>
        <label>Trad Benficiary IRA Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer from an IRA</fullName>
                </value>
                <value>
                    <fullName>Direct Rollover from an Eligible Retirement Plan</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Traditional_IRA_Contribution_Source__c</fullName>
        <description>Specifies the source for the rollover to a Traditional IRA.</description>
        <inlineHelpText>Specifies the source for the rollover to a Traditional IRA.</inlineHelpText>
        <label>Traditional IRA Contribution Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional IRA</fullName>
                </value>
                <value>
                    <fullName>Qualified Plan</fullName>
                </value>
                <value>
                    <fullName>Tax-Sheltered Annuity (TSA)</fullName>
                </value>
                <value>
                    <fullName>457(b)</fullName>
                </value>
                <value>
                    <fullName>SIMPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Traditional_IRA_Contribution_Type__c</fullName>
        <description>The IRA Contribution Type</description>
        <inlineHelpText>The IRA Contribution Type</inlineHelpText>
        <label>Traditional IRA Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular (including Catch-Up)</fullName>
                </value>
                <value>
                    <fullName>Simplified Employee Pension (SEP) Plan</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
                <value>
                    <fullName>Rollover</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from an Eligible Retirement Plan</fullName>
                </value>
                <value>
                    <fullName>Qualified Reservist/Designated Disaster Distribution Repayment</fullName>
                </value>
                <value>
                    <fullName>Disaster/Combat Zone Postponed Contribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deposit Contribution</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEP-CON-{000000}</displayFormat>
        <label>Deposit Contribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>